objects/ArchivedChatterMessage__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChatterMessageId__c</fullName>
        <externalId>true</externalId>
        <label>ChatterMessageId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConversationId__c</fullName>
        <externalId>true</externalId>
        <label>ConversationId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>CreatedById</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SenderId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Chatter_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SentDate__c</fullName>
        <label>SentDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>retentionBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>retentionBit</label>
        <type>Checkbox</type>
    </fields>
    <label>Archived Chatter Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ConversationId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Body__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Archived Chatter Message</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Chatter Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>